Fixed alignment for Default.aspx headers

--- a/Northwind Management Suite/Styles/Default.css
+++ b/Northwind Management Suite/Styles/Default.css
@@ -56,6 +56,9 @@ main {
     font-size: 2.2em;
     text-align: center;
     padding-right: 45%;
+    position: relative;
+    right: 14%;
+    top: 55px;
 }
 
 .paragraphContainer {
